Fix minor layout issue

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,29 +3,27 @@
 @tailwind utilities;
 
 :root {
-  font-size: calc(1rem + 0.25vw);
+    /* One Dark colurs */
+  --mono-1: hsl(220, 14%, 71%);
+  --mono-2: hsl(220, 9%, 55%);
+  --mono-3: hsl(220, 10%, 40%);
+  --hue-1: hsl(187, 47%, 55%);
+  --hue-2: hsl(207, 82%, 66%);
+  --hue-3: hsl(286, 60%, 67%);
+  --hue-4: hsl(95, 38%, 62%);
+  --hue-5: hsl(355, 65%, 65%);
+  --hue-5-2: hsl(5, 48%, 51%);
+  --hue-6: hsl(29, 54%, 61%);
+  --hue-6-2: hsl(39, 67%, 69%);
+  --syntax-fg: hsl(220, 14%, 71%);
+  --syntax-bg: hsl(220, 13%, 18%);
+  --syntax-gutter: hsl(220, 14%, 45%);
+  --syntax-guide: hsla(220, 14%, 71%, 0.15);
+  --syntax-accent: hsl(220, 100%, 66%);
 
-  /* One Dark colurs */
- --mono-1: hsl(220, 14%, 71%);
- --mono-2: hsl(220, 9%, 55%);
- --mono-3: hsl(220, 10%, 40%);
- --hue-1: hsl(187, 47%, 55%);
- --hue-2: hsl(207, 82%, 66%);
- --hue-3: hsl(286, 60%, 67%);
- --hue-4: hsl(95, 38%, 62%);
- --hue-5: hsl(355, 65%, 65%);
- --hue-5-2: hsl(5, 48%, 51%);
- --hue-6: hsl(29, 54%, 61%);
- --hue-6-2: hsl(39, 67%, 69%);
- --syntax-fg: hsl(220, 14%, 71%);
- --syntax-bg: hsl(220, 13%, 18%);
- --syntax-gutter: hsl(220, 14%, 45%);
- --syntax-guide: hsla(220, 14%, 71%, 0.15);
- --syntax-accent: hsl(220, 100%, 66%);
-
- --syntax-selection-color: hsl(220, 13%, 28%);
- --syntax-gutter-background-color-selected: hsl(220, 13%, 26%);
- --syntax-cursor-line: hsla(220, 100%, 80%, 0.04);
+  --syntax-selection-color: hsl(220, 13%, 28%);
+  --syntax-gutter-background-color-selected: hsl(220, 13%, 26%);
+  --syntax-cursor-line: hsla(220, 100%, 80%, 0.04);
 }
 
 html,
@@ -36,6 +34,10 @@ body {
   line-height: 1.6;
 
   color: var(--mono-1);
+  background: var(--syntax-bg);
+}
+
+header {
   background: var(--syntax-bg);
 }
 
